--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,63 @@
+\usepackage{listingsutf8,textcomp,xparse}
 \usepackage[skins]{tcolorbox}
 
+\newcommand\uprightquote{{\fontencoding{T1}\selectfont\textquotedbl}}
+\newcommand\centeredtilde{{\fontfamily{ptm}\selectfont\texttildelow}}% From this answer: https://tex.stackexchange.com/a/160898/134574
+
+\definecolor{DarkBlue}{RGB}{0,22,131}
+\newcommand\YAMLcolonstyle{\color{DarkBlue}\ttfamily}
+\newcommand\YAMLkeystyle{\color{DarkBlue}\ttfamily\bfseries}
+\newcommand\YAMLvaluestyle{\color{black}\ttfamily}
+
+\makeatletter
+\newcommand\language@yaml{yaml}
+\expandafter\expandafter\expandafter\lstdefinelanguage
+\expandafter{\language@yaml}
+{
+  keywords={author,qualifications,position,www,email,phone,signature,address,opening,closing,linestretch,ps,format,
+  title,branding,name,degrees,organization,bibliography,date,toc,presentation-beamer,presentation-revealjs+letterbox,
+  affiliations,department,city,country,postal-code,corresponding,abstract,keywords,wpnumber,jelcodes,blind,cover,wp-pdf,keep-tex,
+  project,type,book,chapters,sidebar,style,csl,degreetype,submitted,affiliation
+  },
+  keywordstyle=\color{DarkBlue}\ttfamily\bfseries,
+  basicstyle=\YAMLkeystyle,                                 % assuming a key comes first
+  sensitive=true,
+  comment=[l]{\#},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color[RGB]{3,106,4}\ttfamily,
+  %moredelim=[l][\color{orange}]{\&},
+  %moredelim=[l][\color{magenta}]{*},
+  moredelim=**[il][\YAMLcolonstyle{:}\YAMLvaluestyle]{:},   % switch to value style at :
+  morestring=[b]',
+  morestring=[b]",
+  literate =    {---}{{\ProcessThreeDashes}}3
+                {>}{{\textcolor{DarkBlue}\textgreater}}1
+                {|}{{\textcolor{DarkBlue}\textbar}}1
+                {\ -\ }{{\ttfamily \ -\ }}3
+                {"}{{\uprightquote}}1
+                {'}{{\textquotesingle}}1
+                {-}{{-}}1
+                {~}{{\centeredtilde}}1
+}
+% switch to key style at EOL
+\lst@AddToHook{EveryLine}{\ifx\lst@language\language@yaml\YAMLkeystyle\fi}
+\makeatother
+
+\newcommand\ProcessThreeDashes{{\color{blue}\ttfamily -{-}-}}
+
+\lstset{numbers=none,
+    language=yaml,
+    stringstyle=\ttfamily,
+    basicstyle=\linespread{0.9}\fontsize{10}{11}\ttfamily,
+    showstringspaces=false
+}
+\def\showyaml#1{
+\begin{block}{}\vspace*{-0.3cm}
+  \lstinputlisting{#1}
+  \vspace*{-0.3cm}
+  \end{block}
+}
 \newtcbox{\whiteshadowbox}[1][]{%
   enhanced,
   center upper,
@@ -15,4 +73,7 @@
   #1%
 }
 
-\def\showtemplate#1{\whiteshadowbox{\includegraphics[height=7cm,keepaspectratio]{#1}}}
+\NewDocumentCommand{\showtemplate}{m o}{\vspace*{-0.3cm}\hspace*{-0.75cm}\whiteshadowbox{%
+\IfValueT{#2}{\includegraphics[page=#2,height=7.5cm,keepaspectratio]{#1}}%
+\IfNoValueT{#2}{\includegraphics[height=7.5cm,keepaspectratio]{#1}}%
+}}
