--- a/quarto_templates.qmd
+++ b/quarto_templates.qmd
@@ -16,34 +16,66 @@ library(ggplot2)
 library(dplyr)
 ```
 
-# Letter template
+# Letter template {.fragile}
 
 \showtemplate{letter.pdf}
+\only<2>{\begin{textblock}{9}(6.5,1)
+\showyaml{letter.yml}
+\end{textblock}}
 
 # Memo template
 
 \showtemplate{memo.pdf}
-
-# Working paper template
-
-\showtemplate{workingpaper.pdf}
+\only<2>{\begin{textblock}{9}(6.5,1)
+\showyaml{memo.yml}
+\end{textblock}}
 
 # Report template
 
-\showtemplate{report.pdf}
+\only<1-2>{\showtemplate{report.pdf}}
+\only<3>{\showtemplate{report.pdf}[2]}
+\only<2-3>{\begin{textblock}{9}(6.5,1)
+\showyaml{report.yml}
+\end{textblock}}
 
 # Exam template
 
-\showtemplate{exam.pdf}
+\only<1-2>{\showtemplate{exam.pdf}}
+\only<3>{\showtemplate{exam.pdf}[2]}
+\only<4>{\showtemplate{exam.pdf}[3]}
+\only<2-4>{\begin{textblock}{9}(6.5,1)
+\showyaml{exam.yml}
+\end{textblock}}
 
 # Presentation template
 
-\showtemplate{presentation.pdf}
+\only<2-3>{\showtemplate{pdfpresentation.pdf}}
+\only<1>{\showtemplate{htmltemplate.png}}
+\only<2-3>{\begin{textblock}{9}(6.5,1)
+\showyaml{presentation.yml}
+\end{textblock}}
 
+# Working paper template
 
-# Presentation template
+\only<1>{\showtemplate{workingpaper.pdf}}
+\only<2>{\showtemplate{workingpaper.pdf}[2]}
+\only<3>{\showtemplate{workingpaper.pdf}[3]}
+\only<4>{\showtemplate{workingpaper.pdf}}
+\only<5-6>{\showtemplate{workingpaper.pdf}[2]}
+\only<7>{\showtemplate{workingpaper.pdf}[3]}
+\only<4-5>{\begin{textblock}{9}(6.5,1)
+\showyaml{workingpaper.yml}
+\end{textblock}}
+\only<6-7>{\begin{textblock}{9}(6.5,1)
+\showyaml{workingpaper2.yml}
+\end{textblock}}
+
+# Thesis template
 
 \showtemplate{thesis.pdf}
+\only<2>{\begin{textblock}{9}(6.5,1)
+\showyaml{thesis.yml}
+\end{textblock}}
 
 # History
 
