--- a/quarto_templates.qmd
+++ b/quarto_templates.qmd
@@ -25,10 +25,17 @@ library(dplyr)
 
 # Memo template
 
-\showtemplate{memo.pdf}
+\showtemplate{memo2.pdf}
 \only<2>{\begin{textblock}{9}(6.5,1)
-\showyaml{memo.yml}
+\showyaml{memo2.yml}
 \end{textblock}}
+
+# Memo template
+
+\showtemplate{memo.pdf}
+\begin{textblock}{9}(6.5,1)
+\showyaml{memo.yml}
+\end{textblock}
 
 # Report template
 
@@ -54,6 +61,11 @@ library(dplyr)
 \only<3>{\begin{textblock}{8.5}(7,.1)
 \showyaml{presentation.yml}
 \end{textblock}}
+\only<4>{\begin{textblock}{8.5}(7,.1)
+\showyaml{presentation2.yml}
+\end{textblock}}
+\only<4-5>{\showtemplate{presentation12.pdf}}
+\only<6>{\showtemplate{presentation13.pdf}}
 
 # Working paper template
 
