Finished first full draft

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,5 @@
 \usepackage{listingsutf8,textcomp,xparse,fancyvrb}
+\usepackage[fixed]{fontawesome5}
 \usepackage[skins]{tcolorbox}
 
 \newcommand\uprightquote{{\fontencoding{T1}\selectfont\textquotedbl}}
